@@ -144,7 +144,7 @@
     </scm>
 
     <properties>
-        <project.build.targetJdk>22</project.build.targetJdk>
+        <project.build.targetJdk>23</project.build.targetJdk>
         <!-- for reproducible build support, updated by release plugin -->
         <project.build.outputTimestamp>2024-07-26T00:21:17Z</project.build.outputTimestamp>
         <!-- TODO remove this property when no module overrides it -->
@@ -153,7 +153,7 @@
         <air.check.skip-spotbugs>true</air.check.skip-spotbugs>
         <air.check.skip-pmd>true</air.check.skip-pmd>
         <air.check.skip-jacoco>true</air.check.skip-jacoco>
-        <air.java.version>22.0.0</air.java.version>
+        <air.java.version>23</air.java.version>
         <air.javadoc.lint>syntax,reference,html,-missing</air.javadoc.lint>
         <air.modernizer.java-version>8</air.modernizer.java-version>
         <air.release.preparation-goals>clean verify -DskipTests</air.release.preparation-goals>
@@ -176,7 +176,10 @@
             <!-- # Allow loading dynamic agent used by JOL -->
             -XX:+EnableDynamicAgentLoading
             ${extraJavaVectorArgs}
+            <!-- # https://bugs.openjdk.org/browse/JDK-8327134 -->
+            -Djava.security.manager=allow
         </air.test.jvm.additional-arguments.default>
+        <air.compiler.enable-preview>true</air.compiler.enable-preview>
         <air.test.jvm.additional-arguments>${air.test.jvm.additional-arguments.default}</air.test.jvm.additional-arguments>
 
         <!-- keep dependency properties sorted -->
@@ -187,6 +190,7 @@
         <dep.antlr.version>4.13.1</dep.antlr.version>
         <dep.avro.version>1.11.3</dep.avro.version>
         <dep.aws-sdk.version>1.12.767</dep.aws-sdk.version>
+        <dep.byte-buddy.version>1.14.19</dep.byte-buddy.version>
         <dep.cassandra.version>4.17.0</dep.cassandra.version>
         <dep.confluent.version>7.5.1</dep.confluent.version>
         <dep.docker.images.version>99</dep.docker.images.version>
@@ -2286,6 +2290,15 @@
             </dependency>
         </dependencies>
     </dependencyManagement>
+    <repositories>
+        <repository>
+            <snapshots>
+                <enabled>false</enabled>
+            </snapshots>
+            <id>byte-buddy</id>
+            <url>https://raw.githubusercontent.com/wendigo/wendigo/master/m2/</url>
+        </repository>
+    </repositories>
 
     <build>
         <pluginManagement>
